# cookiecutter-cuda-kaggle

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .clangd  CMakeLists.txt  deploy.py  kernel-metadata.json  run_job.py
{{cookiecutter.project_slug}}/src/: {{cookiecutter.kernel_name}}.cu
